--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.18.0",
     "@snapshot-labs/snapshot.js": "github:snapshot-labs/snapshot.js#master",
     "apollo-server-express": "^2.25.1",
     "body-parser": "^1.19.0",
