--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
+    "@ethersproject/wallet": "^5.4.0",
     "@snapshot-labs/snapshot.js": "github:snapshot-labs/snapshot.js#master",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
