--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
-    "@snapshot-labs/snapshot.js": "github:snapshot-labs/snapshot.js#master",
+    "@snapshot-labs/snapshot.js": "github:snapshot-labs/snapshot.js#markdown-in-strategy",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": "^6.7.2",
