--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
-    "start": "node dist/src/index.js"
+    "start": "node build/src/index.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
