--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "snapshot-score",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc",
@@ -9,7 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
-    "@snapshot-labs/snapshot.js": "github:snapshot-labs/snapshot.js#markdown-in-strategy",
+    "@snapshot-labs/strategies": "github:snapshot-labs/snapshot-strategies#master",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": "^6.7.2",
