--- a/package.json
+++ b/package.json
@@ -21,13 +21,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "16.4.10",
+    "@types/node": "^14.14.21",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^1.19.1"
-  },
-  "engines": {
-    "node": "14.x"
   }
 }
