--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
-    "@snapshot-labs/strategies": "https://codeload.github.com/snapshot-labs/snapshot-strategies/tar.gz/master",
+    "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies.git#master",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": "^6.7.2",
@@ -26,5 +26,8 @@
     "@typescript-eslint/parser": "^2.33.0",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^1.19.1"
+  },
+  "resolutions": {
+    "@snapshot-labs/strategies": "https://codeload.github.com/snapshot-labs/snapshot-strategies/tar.gz/master"
   }
 }
