--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
-    "start": "node build/src/index.js"
+    "start": "node build/src/index.js",
+    "preinstall": "git submodule update --init --remote && npm run install-strategies",
+    "install-strategies": "cd snapshot-strategies && npm install"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
-    "@snapshot-labs/strategies": "github:snapshot-labs/snapshot-strategies#master",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": "^6.7.2",
