--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,14 @@
 {
   "extends": [
     "config:base"
+  ],
+  "enabledManagers": ["npm"],
+  "rangeStrategy": "bump",
+  "packageRules": [
+    {
+      "packagePatterns": ["*"],
+      "excludePackagePatterns": ["@snapshot-labs/snapshot.js"],
+      "enabled": false
+    }
   ]
 }
