Add snapshot-strategies to rennovate

--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
   "packageRules": [
     {
       "packagePatterns": ["*"],
-      "excludePackagePatterns": ["@snapshot-labs/snapshot.js"],
+      "excludePackagePatterns": ["@snapshot-labs/snapshot.js", "@snapshot-labs/strategies"],
       "enabled": false
     }
   ]
