--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^6.7.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "redis": "^4.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
