--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
-    "@snapshot-labs/strategies": "github:snapshot-labs/snapshot-strategies#master",
+    "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies#master",
     "cors": "^2.8.5",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -25,5 +25,8 @@
     "@typescript-eslint/parser": "^2.33.0",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^1.19.1"
+  },
+  "engines": {
+    "node": ">=16.10.0"
   }
 }
