--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
-    "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies#master",
+    "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies#replace-prepare-with-postinstall",
     "cors": "^2.8.5",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
