--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
     "eslint": "^6.7.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
+    "redis": "^4.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@snapshot-labs/eslint-config": "^0.1.0-beta.2",
     "@types/express": "^4.17.11",
-    "@types/node": "^14.14.21",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^1.19.1"
+    "@types/node": "^14.14.21"
   },
   "engines": {
     "node": "^16.10.0"
