--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.5.1",
     "nodemon": "^2.0.15",
     "redis": "^4.2.0",
     "ts-node": "^10.9.1",
