--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,11 +11,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '16.10.0'
+          node-version: '16.10.x'
       - name: Run lint script
         run: |
-          npm ci
-          npm run lint
+          yarn install --frozen-lockfile
+          yarn lint
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
