--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^14.14.21"
   },
   "engines": {
-    "node": "^16.10.0"
+    "node": ">=17.0.0"
   },
   "resolutions": {
     "@uniswap/v3-periphery": "1.4.1"
