--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '16.10.x'
+          node-version: '17.x.x'
       - name: Run lint script
         run: |
           yarn install --frozen-lockfile
