--- a/.github/workflows/strategies-update.yml
+++ b/.github/workflows/strategies-update.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '16.10.0'
+          node-version: '17.x.x'
       - name: Update snapshot strategies
         run: |
           yarn upgrade @snapshot-labs/strategies
