--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
+# All Optional
 AWS_ACCESS_KEY_ID=
 AWS_BUCKET_NAME=
 AWS_REGION=
 AWS_SECRET_ACCESS_KEY=
 PORT=3003
+DATABASE_URL=redis://redis:6379
