--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ts-jest": "^28.0.0"
   },
   "engines": {
-    "node": ">=17.0.0"
+    "node": ">=16.0.0 <17.0.0"
   },
   "resolutions": {
     "@uniswap/v3-periphery": "1.4.1"
