chore: update github actions task to use node 16

--- a/.github/workflows/fix-lint.yml
+++ b/.github/workflows/fix-lint.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '17.x.x'
+          node-version: '16'
+          cache: 'yarn'
       - name: Run lint script
         run: |
           yarn install --frozen-lockfile
