--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,14 +9,15 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [17.x.x]
+        node-version: ['16']
 
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
     - name: yarn install, build and lint
       run: |
         yarn install --frozen-lockfile
