--- a/.github/workflows/strategies-update.yml
+++ b/.github/workflows/strategies-update.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '17.x.x'
+          node-version: '16'
       - name: Update snapshot strategies
         run: |
           yarn upgrade @snapshot-labs/strategies
