chore: pass secrets to called workflows

--- a/.github/workflows/create-sentry-release.yml
+++ b/.github/workflows/create-sentry-release.yml
@@ -1,10 +1,13 @@
 name: Create a Sentry release
+
 on:
   push:
     branches:
       - 'main'
+
 jobs:
   create-sentry-release:
     uses: snapshot-labs/actions/.github/workflows/create-sentry-release.yml@main
+    secrets: inherit
     with:
       project: score-api
