--- a/.github/workflows/update-strategies.yml
+++ b/.github/workflows/update-strategies.yml
@@ -1,20 +1,24 @@
 name: Update @snapshot-labs/strategies
+
 on:
  workflow_dispatch:
  schedule:
    - cron: 0 * * * *
 
 jobs:
-  update-dep:
+  update-strategies:
+    name: Update strategies
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - name: Update snapshot strategies
-        run: |
-          yarn upgrade @snapshot-labs/strategies
+
+      - name: Update @snapshot-labs/strategies dependency
+        run: yarn upgrade @snapshot-labs/strategies
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
