Rate limit with keycard

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,9 @@ AWS_REGION=
 AWS_SECRET_ACCESS_KEY=
 PORT=3003
 DATABASE_URL=redis://redis:6379
+# Keycard (Optional)
+KEYCARD_URL=https://keycard.snapshot.org
+KEYCARD_SECRET=
+# Sentry (Optional)
 SENTRY_DSN=
 SENTRY_TRACE_SAMPLE_RATE=
