--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
+    "@snapshot-labs/keycard": "https://github.com/snapshot-labs/keycard.js#update-log-request",
     "@snapshot-labs/snapshot-sentry": "^1.1.0",
     "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies#master",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.9.0",
     "nodemon": "^2.0.15",
     "redis": "^4.2.0",
     "ts-node": "^10.9.1",
