--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
-    "@snapshot-labs/keycard": "https://github.com/snapshot-labs/keycard.js#update-log-request",
+    "@snapshot-labs/keycard": "0.2.0",
     "@snapshot-labs/snapshot-sentry": "^1.1.0",
     "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies#master",
     "cors": "^2.8.5",
