--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ts-jest": "^28.0.0"
   },
   "engines": {
-    "node": ">=16.0.0 <17.0.0"
+    "node": ">=16.0.0 <=18.16.1"
   },
   "resolutions": {
     "@uniswap/v3-periphery": "1.4.1"
