--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
+    "@snapshot-labs/keycard": "0.2.0",
     "@snapshot-labs/snapshot-metrics": "^1.0.0",
     "@snapshot-labs/snapshot-sentry": "^1.1.0",
     "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies#master",
@@ -22,6 +23,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.9.0",
     "nodemon": "^2.0.15",
     "redis": "^4.2.0",
     "ts-node": "^10.9.1",
@@ -40,7 +42,7 @@
     "ts-jest": "^28.0.0"
   },
   "engines": {
-    "node": ">=16.0.0 <17.0.0"
+    "node": ">=16 < 17 || >= 18"
   },
   "resolutions": {
     "@uniswap/v3-periphery": "1.4.1"
