--- a/package.json
+++ b/package.json
@@ -29,14 +29,27 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   },
+  "lint-staged": {
+    "*.{js,ts,json}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
     "@snapshot-labs/eslint-config": "^0.1.0-beta.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^28.0.0",
     "@types/node": "^14.14.21",
     "dotenv-cli": "^7.2.1",
+    "husky": "^8.0.3",
     "jest": "^28.0.0",
     "jest-environment-node-single-context": "28",
+    "lint-staged": "^14.0.0",
     "start-server-and-test": "^2.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^28.0.0"
