--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   },
+  "lint-staged": {
+    "*.{js,ts,json}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "@snapshot-labs/eslint-config": "^0.1.0-beta.2",
     "@types/express": "^4.17.11",
