--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "lint-staged": {
     "*.{js,ts,json}": [
-      "yarn lint:fix",
-      "git add"
+      "yarn lint:fix"
     ]
   },
   "devDependencies": {
