--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "tsc",
     "dev": "nodemon src/index.ts",
     "start": "node build/src/index.js",
-    "test:unit": "jest --runInBand",
-    "test:unit:watch": "jest --watch",
+    "test:unit": "jest --config=jest.config.unit.ts",
+    "test:unit:watch": "yarn test:unit --watch",
     "start:test": "dotenv -e test/.env.test yarn dev",
     "test": "PORT=3033 start-server-and-test 'yarn start:test' 3033 'dotenv -e test/.env.test jest --runInBand'",
     "test:e2e": "PORT=3033 start-server-and-test 'yarn start:test' 3033 'dotenv -e test/.env.test jest --runInBand --collectCoverage=false test/e2e/'"
