--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "tsc",
     "dev": "nodemon src/index.ts",
     "start": "node build/src/index.js",
+    "test:unit": "jest --config=jest.config.unit.ts",
+    "test:unit:watch": "yarn test:unit --watch",
     "start:test": "dotenv -e test/.env.test yarn dev",
     "test": "PORT=3033 start-server-and-test 'yarn start:test' 3033 'dotenv -e test/.env.test jest --runInBand'",
     "test:e2e": "PORT=3033 start-server-and-test 'yarn start:test' 3033 'dotenv -e test/.env.test jest --runInBand --collectCoverage=false test/e2e/'"
@@ -38,7 +40,7 @@
   "devDependencies": {
     "@snapshot-labs/eslint-config": "^0.1.0-beta.2",
     "@types/express": "^4.17.11",
-    "@types/jest": "^28.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^14.14.21",
     "dotenv-cli": "^7.2.1",
     "husky": "^8.0.3",
