--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^6.9.0",
     "nodemon": "^2.0.15",
+    "rate-limit-redis": "^3.0.2",
     "redis": "^4.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
