feat(strategies): add required env variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ KEYCARD_SECRET=
 SENTRY_DSN=
 SENTRY_TRACE_SAMPLE_RATE=
 BROVIDER_URL=https://rpc.snapshot.org
+# @snapshot-labs/strategies - Required env variables
+PASSPORT_API_KEY=
+PASSPORT_SCORER_ID=
