--- a/test/load/get_api_validations.yml
+++ b/test/load/get_api_validations.yml
@@ -17,10 +17,11 @@ config:
       name: Ramp down
 
 scenarios:
-  - beforeScenario: "getStrategies"
+  - beforeScenario: "getValidations"
     flow:
       - get:
-          url: /api/strategies
-          name: Get strategies
+          url: /api/validations
+          name: Get validations
           headers:
             cf-connecting-ip: "{{ ip }}"
+
