feat: make score-api turbo aware of turbo spaces

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ AWS_REGION=
 AWS_SECRET_ACCESS_KEY=
 PORT=3003
 DATABASE_URL=redis://redis:6379
+HUB_URL=https://hub.snapshot.org
 # Keycard (Optional)
 KEYCARD_URL=https://keycard.snapshot.org
 KEYCARD_SECRET=
