--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@snapshot-labs/keycard": "0.5.1",
     "@snapshot-labs/snapshot-metrics": "^1.4.1",
     "@snapshot-labs/snapshot-sentry": "^1.5.4",
+    "@snapshot-labs/snapshot.js": "^0.10.1",
     "@snapshot-labs/strategies": "https://github.com/snapshot-labs/snapshot-strategies#master",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
