--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.15",
     "rate-limit-redis": "^3.0.2",
     "redis": "^4.2.0",
+    "starknet": "6.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   },
