fix: schemas and examples

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "yarn lint --fix",
     "typecheck": "tsc --noEmit",
     "build": "tsc",
+    "postbuild": "copyfiles -u 0 \"src/**/*.md\" build/ && copyfiles -u 0 \"src/**/*.json\" build/",
     "dev": "nodemon src/index.ts",
     "start": "node build/src/index.js",
     "test:unit": "jest --config=jest.config.unit.ts",
@@ -69,6 +70,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^29.5.3",
     "@types/node": "^14.14.21",
+    "copyfiles": "^2.4.1",
     "dotenv-cli": "^7.2.1",
     "eslint": "8.28.0",
     "husky": "^8.0.3",
