--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cross-fetch": "^3.1.6",
     "dotenv": "^16.0.3",
     "eth-ens-namehash": "^2.0.8",
+    "ethers": "^6.15.0",
     "express": "^4.17.1",
     "express-rate-limit": "^6.9.0",
     "json-to-graphql-query": "^2.2.4",
@@ -55,7 +56,6 @@
     "rate-limit-redis": "^3.0.2",
     "redis": "^4.2.0",
     "starknet": "6.11.0",
-    "ts-node": "^10.9.1",
     "tulons": "^0.0.7",
     "typescript": "^4.1.3"
   },
@@ -80,7 +80,8 @@
     "prettier": "^3.0.3",
     "start-server-and-test": "^2.0.0",
     "supertest": "^6.3.3",
-    "ts-jest": "^28.0.0"
+    "ts-jest": "^28.0.0",
+    "ts-node": "^10.9.2"
   },
   "eslintConfig": {
     "extends": "@snapshot-labs"
