--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@snapshot-labs/keycard": "0.5.1",
     "@snapshot-labs/snapshot-metrics": "^1.4.1",
     "@snapshot-labs/snapshot-sentry": "^1.5.5",
-    "@snapshot-labs/snapshot.js": "^0.14.5",
+    "@snapshot-labs/snapshot.js": "^0.14.7",
     "@spruceid/didkit-wasm-node": "^0.2.1",
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/v3-sdk": "^3.9.0",
@@ -48,7 +48,6 @@
     "cross-fetch": "^3.1.6",
     "dotenv": "^16.0.3",
     "eth-ens-namehash": "^2.0.8",
-    "ethers": "^6.15.0",
     "express": "^4.17.1",
     "express-rate-limit": "^6.9.0",
     "json-to-graphql-query": "^2.2.4",
@@ -56,6 +55,7 @@
     "rate-limit-redis": "^3.0.2",
     "redis": "^4.2.0",
     "starknet": "6.11.0",
+    "ts-node": "^10.9.1",
     "tulons": "^0.0.7",
     "typescript": "^4.1.3"
   },
@@ -80,8 +80,7 @@
     "prettier": "^3.0.3",
     "start-server-and-test": "^2.0.0",
     "supertest": "^6.3.3",
-    "ts-jest": "^28.0.0",
-    "ts-node": "^10.9.2"
+    "ts-jest": "^28.0.0"
   },
   "eslintConfig": {
     "extends": "@snapshot-labs"
