--- a/src/strategies/strategies/aavegotchi-wagmi-guild/manifest.json
+++ b/src/strategies/strategies/aavegotchi-wagmi-guild/manifest.json
@@ -1,5 +1,5 @@
 {
   "name": "Aavegotchi WAGMI Guild",
-  "author": "programmablewealth",
-  "version": "0.1.0"
+  "author": "BromeRST",
+  "version": "0.2.0"
 }
