fix: flag strategies as overriding
A few overriding strategies are not flag as overrding

--- a/src/strategies/strategies/balance-of-with-linear-vesting-power/manifest.json
+++ b/src/strategies/strategies/balance-of-with-linear-vesting-power/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "Balance Of With Linear Vesting Power",
   "author": "morpho-labs",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "overriding": true
 }
