--- a/src/strategies/strategies/erc20-balance-of-fixed-total/manifest.json
+++ b/src/strategies/strategies/erc20-balance-of-fixed-total/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "ERC-20 Balance Of Fixed Total",
   "author": "bonustrack",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "overriding": true
 }
