--- a/src/strategies/strategies/erc20-balance-of-quadratic-delegation/manifest.json
+++ b/src/strategies/strategies/erc20-balance-of-quadratic-delegation/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "ERC-20 Balance Of Quadratic Delegation",
   "author": "ferittuncer",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "overriding": true
 }
