fix: test issues

--- a/src/strategies/strategies/aavegotchi-agip-37-gltr-staked-lp/manifest.json
+++ b/src/strategies/strategies/aavegotchi-agip-37-gltr-staked-lp/manifest.json
@@ -1,5 +1,5 @@
 {
   "name": "Aavegotchi AGIP 37 GLTR Staked LP",
-  "author": "programmablewealth",
+  "author": "BromeRST",
   "version": "0.0.2"
 }
