[aavegotchi-wagmi-guild] update/aavegotchi-strategies-for-base (#1380)
* feat: add base to aavegotchi strategies

* fix: remove deprecated polygon parts

* fix: add new wearables

* feat: update addresses for gltr staking strategy

* fix: test issues

* Update src/strategies/strategies/aavegotchi-agip-37-gltr-staked-lp/manifest.json

* Update src/strategies/strategies/aavegotchi-agip-17/manifest.json

* Update src/strategies/strategies/aavegotchi-wagmi-guild/manifest.json

* Update src/strategies/strategies/aavegotchi-agip/manifest.json

---------

Co-authored-by: Chaitanya <yourchaitu@gmail.com>

--- a/src/strategies/strategies/aavegotchi-agip-17/manifest.json
+++ b/src/strategies/strategies/aavegotchi-agip-17/manifest.json
@@ -1,5 +1,5 @@
 {
   "name": "Aavegotchi AGIP 17",
-  "author": "candoizo",
-  "version": "0.1.2"
+  "author": "aavegotchi",
+  "version": "0.2.0"
 }
