--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ SNAPSHOT_API_STRATEGY_SALT=12345 # Salt for the snapshot API strategy to send a 
 PASSPORT_API_KEY= # API key for the passport API (optional for other strategies)
 PASSPORT_SCORER_ID= # Scorer ID for the passport API (optional for other strategies)
 MOXIE_API_KEY= # API key for the moxie APIs (optional for other strategies)
+SNAPSHOT_STORY_PARTNER_KEY_MAINNET=
+SNAPSHOT_STORY_PARTNER_KEY_TESTNET=
